--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
      <button onclick="loadData2()">Load data2</button>
      <button onclick="userData()">User data</button>
      <button onclick="loadUser2()">Load user2</button>
+     <button onclick="createPost()">Create post</button>
+     <button onclick="deletePost() ">Delete post</button>
+     <button onclick="patchPost()">Update post</button>
      <div class="user-container">
         <ul id="user-list">
-            
+
 
         </ul>
 
